# contree-mcp

./: .gitignore  LICENSE  README.md  SECURITY.md  llm.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  tests.yml
contree_mcp/: __main__.py  app.py  arguments.py  backend_types.py  cache.py  client.py  context.py  docs.py  file_cache.py  prompts.py  server.py
contree_mcp/auth/: __init__.py  registry.py
contree_mcp/resources/: __init__.py  guide.py  image_lineage.py  image_ls.py  import_operation.py  instance_operation.py  read_file.py  static.py
contree_mcp/tools/: __init__.py  cancel_operation.py  download.py  get_guide.py  get_image.py  get_operation.py  import_image.py  list_files.py  list_images.py  list_operations.py  read_file.py  registry_auth.py  registry_token_obtain.py  rsync.py  run.py  set_tag.py  upload.py  wait_operations.py
docs/: Makefile  cheatsheet.md  conf.py  index.md  llm.txt  patterns.md  quickstart.md  resources.md
docs/concepts/: core.md  index.md  workflows.md
docs/integration/: configuration.md  index.md  troubleshooting.md
docs/prompts/: build-project.md  debug-failure.md  index.md  inspect-image.md  install-packages.md  multi-stage-build.md  parallel-tasks.md  prepare-environment.md  run-python.md  run-shell.md  sync-and-run.md
docs/reference/: glossary.md  index.md
docs/tools/: cancel_operation.md  download.md  get_guide.md  get_image.md  get_operation.md  import_image.md  index.md  list_files.md  list_images.md  list_operations.md  read_file.md  registry_auth.md  registry_token_obtain.md  rsync.md  run.md  set_tag.md  upload.md  wait_operations.md
tests/: __init__.py  conftest.py  test_async_file_writer.py  test_client.py  test_context.py  test_docs.py  test_file_cache.py  test_general_cache.py  test_http_server.py  test_main.py  test_prompts.py  test_types.py
tests/auth/: test_registry.py
tests/tools/: __init__.py  (+15 more)
(+5 files in other folders)
